# scresonators

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  __init__.py  mini.yml  plot_fits.ipynb  pyproject.toml  requirements.txt  res_params.yaml  res_temp_sweep_simp.ipynb  res_temp_sweep_simp2.ipynb  resonator_meas.yaml  setup.py  vna_readout_25_05.ipynb
configs/: Res3.yml  Terracat2.yml
dbs/: load_res_database.ipynb  notion.ipynb
fit_resonator/: __init__.py  ana_resonator.py  ana_tls.py  basic_fit.py  fit.py  plot.py  plot_fits.ipynb  resonator.py
measurement/: Instrument.py  VNA_funcs.py  ZNB.py  __init__.py  handy.py  helpers.py  ldatesteth.py  rfsoc_scan.py  vna_measurement.py  vna_measurement2.py  vna_scan.py
plotting/: __init__.py  plotres.py
src/: __init__.py  fitter.py  resonator.py
src/fit_methods/: dcm.py
